# nufeb_tools

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  RunBatch.slurm  profiling test mother_cells.py  profiling test.py  profiling.prof  profiling_mother.prof  setup.cfg  setup.py  tox.ini
.github/workflows/: Test.yml  python-publish.yml
data/Run_26_90_83_1/: output.lammmps
data/Run_26_90_83_1/Results/: avg_concentration.csv  biomass.csv  ntypes.csv
data/Run_60_18_63_1_2021-06-23/: Inputscript_60_18_63_2021-06-23.lammps  Inputscript_60_18_63_2021-06-23.slurm  atom_0.vtu  atom_0_boundingBox.vtr  atom_100.vtu  atom_1000.vtu  atom_10000.vtu  atom_10000_boundingBox.vtr  atom_1000_boundingBox.vtr  atom_100_boundingBox.vtr  atom_1100.vtu  atom_1100_boundingBox.vtr  atom_1200.vtu  atom_1200_boundingBox.vtr  atom_1300.vtu  atom_1300_boundingBox.vtr  atom_1400.vtu  atom_1400_boundingBox.vtr  atom_1500.vtu  atom_1500_boundingBox.vtr  atom_1600.vtu  atom_1600_boundingBox.vtr  atom_1700.vtu  atom_1700_boundingBox.vtr  atom_1800.vtu  atom_1800_boundingBox.vtr  atom_1900.vtu  atom_1900_boundingBox.vtr  atom_200.vtu  atom_2000.vtu  atom_2000_boundingBox.vtr  atom_200_boundingBox.vtr  atom_2100.vtu  atom_2100_boundingBox.vtr  atom_2200.vtu  atom_2200_boundingBox.vtr  atom_2300.vtu  atom_2300_boundingBox.vtr  atom_2400.vtu  atom_2400_boundingBox.vtr  (+977 more)
data/Run_60_18_63_1_2021-06-23/Results/: avg_concentration.csv  biomass.csv  ntypes.csv
data/Run_98_53_11_1/Results/: avg_concentration.csv  biomass.csv  ntypes.csv
docs/: DataFed Integration.rst  NUFEB atom generation.rst  analysis.rst  atom_generation.rst  conf.py  datafed.rst  examples.rst  index.rst  requirements.txt
docs/_static/tables/: metrics.csv
examples/: test.py
notebooks/: Untitled.ipynb  cell ancestry - Copy.ipynb  cell ancestry.ipynb  dask testing.ipynb  dasktest.py  metadata.json  myfile.json  neighbor fitness.ipynb  neighbor-fitness.ipynb  neighbor.ipynb  nutrient-gradients.ipynb  test.py
runs/: atom_20_30_98_1.in  atom_4_64_11_1.in  atom_91_87_14_1.in  run_4_64_11.pkl
src/nufeb_tools/: datafed.py  generate_atom.py  generate_atom_dev.py  get_data.py  maketestplots.py  parameter_optimization.py  plot.py  skeleton.py  spatial.py  stats.py  storage.py  test.py  utils.py  whole_culture_growth_curves.py
src/nufeb_tools/analysis/: __init__.py  get_data.py  test.py  whole_culture_growth_curves.py
src/nufeb_tools/datafed/: DatafedVerify.py  Datafedcreate.py
src/nufeb_tools/templates/: Inputscript.txt  Slurm.txt  bacillus_.txt  fix_bio_kinetics_monod.txt  fix_bio_kinetics_monod2.txt  inputscript.txt  inputscript_.txt  local.txt  slurm.txt  slurm_.txt
src/nufeb_tools/utils/: GenerateAtom.py  __init__.py  allclean.py  generate_atom.py  test.py
tests/: conftest.py  neighbor analysis.ipynb  test_atom_gen.py  test_data_import.py  test_nufeb_tools.py  test_plotting.py  test_skeleton.py  test_utils.py
